# ETP-Skilling_Two_Voice_bot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: index.html  main.py  prompts.py
