[project]
name = "agent-english-bot"
version = "0.1.0"
description = "3-way English interview practice — Neerja + Manish + Student"
requires-python = ">=3.11"

dependencies = [
    "livekit-agents>=1.0.0",
    "livekit-plugins-openai>=0.1.0",
    "livekit-plugins-azure>=0.1.0",
    "livekit-plugins-silero>=0.1.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]
